# live-bootcamp-project

./: README.md  compose.yml
.github/workflows/: prod.yml
.zed/: tasks.json
app-service/: Dockerfile
auth-service/: .env.example  Cargo.toml  Dockerfile
auth-service/src/: lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: banned_user_store.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mod.rs
auth-service/src/utils/: auth.rs  constants.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  macros.rs  main.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
