[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
validator = "=0.20.0"

[dev-dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
fake = {version = "5.1.0"}
rand = "0.10.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
